--- a/AppendixB/phishing_machine_learning.ipynb
+++ b/AppendixB/phishing_machine_learning.ipynb
@@ -164,7 +164,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = X.drop_duplicates()"
+    "y = y[~X.duplicated()].reset_index(drop=True) \n",
+    "X = X[~X.duplicated()].reset_index(drop=True) "
    ]
   },
   {
@@ -784,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
